tests/ui/parser/keyword-let-as-identifier.stderr
error: expected identifier, found keyword `let`
  --> $DIR/keyword-let-as-identifier.rs:4:9
   |
LL |     let let = "foo";
   |         ^^^ expected identifier, found keyword
   |
help: escape `let` to use it as an identifier
   |
LL |     let r#let = "foo";
   |         ++

error: aborting due to 1 previous error

