tests/ui/parser/keyword-let-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py let'

fn main() {
    let let = "foo"; //~ error: expected identifier, found keyword `let`
}
